Requisito 2 :heavy_check_mark:

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <header id="cabecalho">
+            <h1 id="titulo">Olá, eu sou o Título, o bonitão desta página</h1>
+        </header>        
     </body>
 </html>
