Requisito 3 :heavy_check_mark:

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <header id="cabecalho">
             <h1 id="titulo">Olá, eu sou o Título, o bonitão desta página</h1>
-        </header>        
+        </header>
+        <img src="eu.jpg" alt="Foto do perfil de uma mulher maravilhosa" id="minha_foto">
     </body>
 </html>
