Requisito 4 :heavy_check_mark:

--- a/index.html
+++ b/index.html
@@ -9,5 +9,18 @@
             <h1 id="titulo">Olá, eu sou o Título, o bonitão desta página</h1>
         </header>
         <img src="eu.jpg" alt="Foto do perfil de uma mulher maravilhosa" id="minha_foto">
+
+        <ol id="licoes_aprendidas">
+            <li>Git</li>
+            <li>Git Hub</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>HTML Semâtico</li>
+            <li>Comandos no Termial</li>
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>Internet</li>
+            <li>Zoom e Slack</li>
+        </ol>
     </body>
 </html>
