--- a/index.html
+++ b/index.html
@@ -5,22 +5,42 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
         <header id="cabecalho">
             <h1 id="titulo">Olá, eu sou o Título, o bonitão desta página</h1>
         </header>
+
         <img src="eu.jpg" alt="Foto do perfil de uma mulher maravilhosa" id="minha_foto">
 
-        <ol id="licoes_aprendidas">
-            <li>Git</li>
-            <li>Git Hub</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>HTML Semâtico</li>
-            <li>Comandos no Termial</li>
-            <li>Unix</li>
-            <li>Bash</li>
-            <li>Internet</li>
-            <li>Zoom e Slack</li>
-        </ol>
+        <section id="listaEsq">
+          <ol id="licoes_aprendidas">
+              <li>Git</li>
+              <li>Git Hub</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>HTML Semâtico</li>
+              <li>Comandos no Termial</li>
+              <li>Unix</li>
+              <li>Bash</li>
+              <li>Internet</li>
+              <li>Zoom e Slack</li>
+        </ol>  
+        </section>
+
+        <section id="listaDir">
+           <ul id="licoes_a_aprender">
+              <li>Javascript</li>
+              <li>Lógica de programação</li>
+              <li>DOM, Eventos e Wev Storage</li>
+              <li>Forms</li>
+              <li>Flexbox</li>
+              <li>Responsivo</li>
+              <li>JS EES6</li>
+              <li>Teste Unitários</li>
+              <li>Funções</li>
+              <li>Testes Automatizados</li>
+            </ul> 
+        </section>
+        
     </body>
 </html>
