Requisito 6 :heavy_check_mark:

--- a/index.html
+++ b/index.html
@@ -42,5 +42,9 @@
             </ul> 
         </section>
         
+        <footer id="rodape">
+          <p>Desenvolvido por Letícia Castro</p>
+        </footer>
+        
     </body>
 </html>
