Requisito 7 :heavy_check_mark:

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
               <li>Testes Automatizados</li>
             </ul> 
         </section>
+
+        <aside>
+          <a href="www.google.com" target="_blank">G O O G L</a>
+        </aside>
         
         <footer id="rodape">
           <p>Desenvolvido por Letícia Castro</p>
