--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
         <img src="eu.jpg" alt="Foto do perfil de uma mulher maravilhosa" id="minha_foto">
 
+        <article>
+          <p>
+            Но нет! Мне не под силу это, меня подавляет величие этих явлений. Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца. Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я. Я так счастлив, мой друг, так упоен ощущением покоя, что искусство мое страдает от этого. Ни одного штриха не мог бы я сделать, а никогда не был таким большим художником, как в эти минуты.
+          </p>
+        </article>
+
         <section id="listaEsq">
           <ol id="licoes_aprendidas">
               <li>Git</li>
@@ -43,7 +49,7 @@
         </section>
 
         <aside>
-          <a href="www.google.com" target="_blank">G O O G L</a>
+          <a href="http://www.google.com/" target="_blank">G O O G L</a>
         </aside>
         
         <footer id="rodape">
