--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
         <img src="eu.jpg" alt="Foto do perfil de uma mulher maravilhosa" id="minha_foto">
 
-        <article>
-          <p>
-            Но нет! Мне не под силу это, меня подавляет величие этих явлений. Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца. Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я. Я так счастлив, мой друг, так упоен ощущением покоя, что искусство мое страдает от этого. Ни одного штриха не мог бы я сделать, а никогда не был таким большим художником, как в эти минуты.
-          </p>
+        <article>          
+            Но нет! Мне не под силу это, меня подавляет величие этих явлений. Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца. Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я. Я так счастлив, мой друг, так упоен ощущением покоя, что искусство мое страдает от этого. Ни одного штриха не мог бы я сделать, а никогда не был таким большим художником, как в эти минуты.          
         </article>
+
+        <aside>
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+        </aside>
 
         <section id="listaEsq">
           <ol id="licoes_aprendidas">
@@ -48,9 +50,9 @@
             </ul> 
         </section>
 
-        <aside>
-          <a href="http://www.google.com/" target="_blank">G O O G L</a>
-        </aside>
+        <p>
+          <a href="http://www.google.com/" target="_blank">G O O G L E</a>
+        </p>
         
         <footer id="rodape">
           <p>Desenvolvido por Letícia Castro</p>
