Requisito 10 :heavy_check_mark:

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
             <h1 id="titulo">Olá, eu sou o Título, o bonitão desta página</h1>
         </header>
 
+        <nav>
+          <p>
+            <a href="http://www.google.com/" target="_blank">G O O G L E</a>
+          </p>
+        </nav>
+
         <img src="eu.jpg" alt="Foto do perfil de uma mulher maravilhosa" id="minha_foto">
 
         <article>          
@@ -48,12 +54,8 @@
               <li>Funções</li>
               <li>Testes Automatizados</li>
             </ul> 
-        </section>
+          </section>
 
-        <p>
-          <a href="http://www.google.com/" target="_blank">G O O G L E</a>
-        </p>
-        
         <footer id="rodape">
           <p>Desenvolvido por Letícia Castro</p>
         </footer>
