Requisito 11 :heavy_check_mark:

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <head>        
         <title>Project Lessons Learned - Bloc 3.5</title>
         <link rel="stylesheet" href="style.css">
