--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <img src="eu.jpg" alt="Foto do perfil de uma mulher maravilhosa" id="minha_foto">
 
-        <article>          
+        <article>
             Но нет! Мне не под силу это, меня подавляет величие этих явлений. Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца. Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я. Я так счастлив, мой друг, так упоен ощущением покоя, что искусство мое страдает от этого. Ни одного штриха не мог бы я сделать, а никогда не был таким большим художником, как в эти минуты.          
         </article>
 
@@ -26,35 +26,42 @@
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
         </aside>
 
-        <section id="listaEsq">
-          <ol id="licoes_aprendidas">
-              <li>Git</li>
-              <li>Git Hub</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>HTML Semâtico</li>
-              <li>Comandos no Termial</li>
-              <li>Unix</li>
-              <li>Bash</li>
-              <li>Internet</li>
-              <li>Zoom e Slack</li>
-        </ol>  
-        </section>
-
-        <section id="listaDir">
-           <ul id="licoes_a_aprender">
-              <li>Javascript</li>
-              <li>Lógica de programação</li>
-              <li>DOM, Eventos e Wev Storage</li>
-              <li>Forms</li>
-              <li>Flexbox</li>
-              <li>Responsivo</li>
-              <li>JS EES6</li>
-              <li>Teste Unitários</li>
-              <li>Funções</li>
-              <li>Testes Automatizados</li>
-            </ul> 
-          </section>
+        <table>
+          <tr>
+            <td>
+              <section id="listaEsq">
+                <ol id="licoes_aprendidas">
+                    <li>Git</li>
+                    <li>Git Hub</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>HTML Semâtico</li>
+                    <li>Comandos no Termial</li>
+                    <li>Unix</li>
+                    <li>Bash</li>
+                    <li>Internet</li>
+                    <li>Zoom e Slack</li>
+                </ol>  
+              </section>
+            </td>
+            <td>
+              <section id="listaDir">
+                <ul id="licoes_a_aprender">
+                  <li>Javascript</li>
+                  <li>Lógica de programação</li>
+                  <li>DOM, Eventos e Wev Storage</li>
+                  <li>Forms</li>
+                  <li>Flexbox</li>
+                  <li>Responsivo</li>
+                  <li>JS EES6</li>
+                  <li>Teste Unitários</li>
+                  <li>Funções</li>
+                  <li>Testes Automatizados</li>
+                </ul> 
+              </section>
+            </td>
+          </tr>
+        </table>        
 
         <footer id="rodape">
           <p>Desenvolvido por Letícia Castro</p>
