Requisito 14 :heavy_check_mark:

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </article>
 
         <aside>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
         </aside>
 
         <table>
