--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
         <img src="eu.jpg" alt="Foto do perfil de uma mulher maravilhosa" id="minha_foto">
 
-        <article>
+        <article class="lado-esquerdo">
             Но нет! Мне не под силу это, меня подавляет величие этих явлений. Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца. Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я. Я так счастлив, мой друг, так упоен ощущением покоя, что искусство мое страдает от этого. Ни одного штриха не мог бы я сделать, а никогда не был таким большим художником, как в эти минуты.          
         </article>
 
-        <aside>
+        <aside class="lado-direito">
           Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
         </aside>
 
