Novas melhorias no codigo dos arquivo html e css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <table>
           <tr>
             <td>
-              <section id="listaEsq">
+              <!--section id="listaEsq"-->
                 <ol id="licoes_aprendidas">
                     <li>Git</li>
                     <li>Git Hub</li>
@@ -42,10 +42,10 @@
                     <li>Internet</li>
                     <li>Zoom e Slack</li>
                 </ol>  
-              </section>
+              <!--/section-->
             </td>
             <td>
-              <section id="listaDir">
+              <!--section id="listaDir"-->
                 <ul id="licoes_a_aprender">
                   <li>Javascript</li>
                   <li>Lógica de programação</li>
@@ -58,7 +58,7 @@
                   <li>Funções</li>
                   <li>Testes Automatizados</li>
                 </ul> 
-              </section>
+              <!--/section-->
             </td>
           </tr>
         </table>        
